--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,8 @@ CC=avr-gcc-8
 CXX=avr-g++-8
 AR=avr-ar
 
-DEVICE=__AVR_ATmega328P__
 
-CXXFLAGS=-mmcu=atmega328p -std=c++17 -O2 -fmax-errors=5 -Wall -Wextra -DF_CPU=16000000L -DARDUINO=105 -ffunction-sections -fdata-sections -w -I./../arduino/ -I./ArduinoSTL/src -I./
+CXXFLAGS=-std=c++17 -O2 -fmax-errors=5 -Wall -Wextra -DF_CPU=16000000L -DARDUINO=105 -ffunction-sections -fdata-sections -w -I./../arduino/ -I./ArduinoSTL/src -I./
 
 
 libtimcoro.a: Coroutine.o
